fix title spacing

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -17,6 +17,7 @@
 .loginTitle {
     font-size: 23px;
     font-weight: 400;
+    width: 300px;
 }
 
 .loginSubTitle {
